# graded-readers

./: .gitignore  PIPELINE.md  README.md  pyproject.toml  requirements.txt
jlpt/: pyproject.toml
jlpt/data/: jlpt_levels.json
jlpt/data/words/: n2_words.csv  n3_words.csv  n5_words.csv
jlpt/output/akutagawa/: glossary.txt  metadata.json  n1_akutagawa.md  n2_akutagawa.md  n3_akutagawa.md  n4_akutagawa.md  n5_akutagawa.md  taught_vocab.txt
jlpt/output/botchan/: glossary.json  glossary.txt  metadata.json  n1_botchan.md  n2_botchan.md  n3_botchan.md  n4_botchan.md  n5_botchan.md  taught_vocab.txt
jlpt/output/genji/: glossary.json  glossary.txt  n1_genji.md  n1_vocab.json  n2_genji.md  n3_genji.md  n4_genji.md  n5_genji.md  taught_vocab.txt
jlpt/output/heike/: glossary.json  glossary.txt  n1_heike.md  n1_vocab.json  n2_heike.md  n3_heike.md  n3_vocab.json  n4_heike.md  n5_heike.md  taught_vocab.txt
jlpt/output/hyakunin/: glossary.txt  metadata.json  n1_hyakunin.md  n2_hyakunin.md  n3_hyakunin.md  n4_hyakunin.md  n5_hyakunin.md  taught_vocab.txt
jlpt/readers/: n1_02_bushido.md  n2_01_wabi_sabi.md  n2_02_hikikomori.md  n2_04_merosu.md  n3_01_machi_to_inaka.md  n3_02_matsuri.md  n3_04_manga_to_anime.md  n3_05_shinkansen.md  n3_06_chuumon.md  n4_01_shuumatsu_no_keikaku.md  n4_02_ryokou.md  n4_03_nihon_no_kisetsu.md  n4_04_arubaito.md  n4_05_yume.md  n5_03_watashi_no_heya.md  n5_04_nihon_no_tabemono.md  n5_05_tanjoubi.md  n5_07_kaimono.md
jlpt/src/: cli.py  config.py
jlpt/tests/: conftest.py  test_constraints.py  test_output_compliance.py  test_vocab_loader.py
(+631 files in other folders)
